# startrade

./: .gitignore  README.md  auths.json  bot.py  functions.py  ignored_channels.json  prefixes.json  pyproject.toml  requirements.txt
cogs/: basics.py  database.py  dev.py  economy.py  googleapi.py  logging.py  management.py  mechanics.py  moderation.py  webhooks.py  welcome.py  windowshopping.py
utils/: hit_calculator.py
