[tool.poetry]
name = "startrade"
version = "0.1.0"
description = ""
authors = ["Vyryn <43193760+Vyryn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yarl = "^1.9.2"
websockets = "^11.0.3"
urllib3 = "^2.0.7"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
pytz = "^2023.3.post1"
psycopg2 = "^2.9.9"
protobuf = "^4.24.4"
oauthlib = "^3.2.2"
google-auth-oauthlib = "^1.1.0"
google-auth = "^2.23.3"
discord-py = "^2.3.2"
asyncpg = "^0.28.0"
google-api-core = "^2.12.0"
google-api-python-client = "^2.104.0"
google-auth-httplib2 = "^0.1.1"
googleapis-common-protos = "^1.61.0"
flake8 = "^6.1.0"
black = "^23.10.0"
mypy = "^1.6.1"
pylint = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
